# strategia

./: CMakeLists.txt
src/: aggregator.cpp  config.hpp  main.cpp  time_utils.hpp
src/cpr/: cpr.h
src/exchanges/: binance_client.cpp  binance_client.hpp  exchange_client.hpp  okx_client.cpp  okx_client.hpp
src/http/: http_client.cpp  http_client.hpp
src/storage/: csv_writer.cpp  csv_writer.hpp  postgres_writer.cpp  postgres_writer.hpp  storage_writer.hpp
